--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ ignore_patterns = [
     ".*",
     "venv",
 ]
+
 [tool.black]
 # black .
 exclude = "(^\\.|^__pycache__|^venv)"
@@ -95,3 +96,32 @@ inputs = ['microgp4']
 [tool.pylint]
 max-line-length = 120
 source-roots = ['src']
+
+[tool.poetry]
+name = "microgp4"
+version = "4.2"
+description = "Yet another multi-purpose extensible self-adaptive evolutionary tool"
+authors = ["Giovanni Squillero <giovanni.squillero@polito.it>"]
+license = "Apache-2.0"
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = ">=3.11,<3.13"
+tqdm = "^4.65.0"
+numpy = "^1.25.0"
+networkx = "^3.1"
+scipy = "^1.11.1"
+
+[tool.poetry.group.dev.dependencies]
+yapf = "^0.40.1"
+black = {extras = ["jupyter"], version = "^23.3.0"}
+ipykernel = "^6.23.3"
+pytest = "^7.4.0"
+coverage = "^7.2.7"
+mypy = "^1.4.1"
+pylint = "^2.17.4"
+matplotlib = "^3.7.1"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
