--- a/pyproject.toml
+++ b/pyproject.toml
@@ -121,6 +121,8 @@ mypy = "^1.4.1"
 pylint = "^2.17.4"
 pytest = "^7.4.0"
 yapf = "^0.40.1"
+matplotlib = "^3.7.1"
+jupyter = "^1.0.0"
 
 [tool.poetry.extras]
 plot = ["matplotlib"]
