Some work on windoze

--- a/examples/onemax-asm_win_x64/Makefile
+++ b/examples/onemax-asm_win_x64/Makefile
@@ -1,6 +1,6 @@
 #############################################################################
 #           __________                                                      #
-#    __  __/ ____/ __ \__ __   This file is part of MicroGP4 v4!2.0         #
+#    __  __/ ____/ __ \__ __   This file is part of MicroGP v4!2.0          #
 #   / / / / / __/ /_/ / // /   A versatile evolutionary optimizer & fuzzer  #
 #  / /_/ / /_/ / ____/ // /_   https://github.com/microgp/microgp4          #
 #  \__  /\____/_/   /__  __/                                                #
@@ -10,8 +10,13 @@
 # Copyright 2022-23 Giovanni Squillero and Alberto Tonda
 # SPDX-License-Identifier: Apache-2.0
 
-# Use pip install -U -r requirements.txt
+SHELL=/bin/sh
+CFLAGS = -O3
 
-tqdm>=4.65
-numpy>=1.24
-networkx>=3.1
+.PHONY: run
+
+run: onemax
+	./onemax
+
+onemax: main.o onemax.s
+	gcc -o $@ $^
