--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,6 +113,7 @@ numpy = "^1.25.0"
 python = ">=3.11,<3.13"
 tqdm = "^4.65.0"
 scipy = "^1.11.1"
+joblib = "^1.3.1"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^23.3.0"}
