--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ target-version = ['py311', 'py312']
 exclude = "(^\\.|^__pycache__|^venv)"
 include = '(\.ipynb$|\.py$)'
 line-length = 120
+skip-string-normalization = true
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
