--- a/examples/.gitignore
+++ b/examples/.gitignore
@@ -8,4 +8,14 @@
 #                                                                           #
 #############################################################################
 
-phenotype_*.txt
+# temporrary files created during examples
+.*
+*.dat
+*.lst
+*.o
+*.out
+*.png
+*.s
+*.svg
+*.tmp
+*.txt
