--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,12 @@
 
 [tool.poetry]
 name = "microgp4"
-version = "4!2.0a1.dev5"
+version = "4!2.0a1.dev6"
 description = "Yet another multi-purpose extensible self-adaptive evolutionary tool"
-authors = [ "Giovanni Squillero <giovanni.squillero@polito.it>", "Alberto Tonda <alberto.tonda@inrae.fr>"]
+authors = [
+    "Giovanni Squillero <giovanni.squillero@polito.it>",
+    "Alberto Tonda <alberto.tonda@inrae.fr>",
+]
 license = "Apache-2.0"
 readme = "PYPI.md"
 classifiers = [
@@ -37,10 +40,9 @@ python = ">=3.11,<3.13"
 tqdm = "^4.65.0"
 scipy = "^1.11.1"
 joblib = "^1.3.1"
-install = "^1.3.5"
 
 [tool.poetry.group.dev.dependencies]
-black = {extras = ["jupyter"], version = "^23.3.0"}
+black = { extras = ["jupyter"], version = "^23.3.0" }
 coverage = "^7.2.7"
 ipykernel = "^6.23.3"
 mypy = "^1.4.1"
@@ -64,10 +66,7 @@ blank_line_before_module_docstring = true
 column_limit = 120
 
 [tool.yapfignore]
-ignore_patterns = [
-    ".*",
-    "venv",
-]
+ignore_patterns = [".*", "venv"]
 
 [tool.black]
 target-version = ['py311', 'py312']
@@ -84,27 +83,7 @@ branch = true
 
 [tool.coverage.report]
 include = ['microgp4/*']
-omit = ['test/*'] #, '.venv/*', 'venv/*']
-
-[tool.bumpver]
-#commit = true
-#commit_message = "Bump version from {old_version} to {new_version}"
-#current_version = "1.0.3"
-#push = true
-#tag = true
-#version_pattern = "MAJOR.MINOR.PATCH"
-
-#[tool.bumpver.file_patterns]
-#"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
-#"src/bst/__init__.py" = ["__version__ = '{version}'"]
-
-#[build-system]
-#build-backend = "setuptools.build_meta"
-#requires = ["setuptools>=61.0.0", "wheel"]
-#
-#[build-system]
-#build-backend = "hatchling.build"
-#requires = ["hatchling"]
+omit = ['test/*']        #, '.venv/*', 'venv/*']
 
 [tool.mypy]
 modules = ['microgp4']
